# daily-minesweeper-solver

./: README.md  pyproject.toml
src/: create_sample_data.py  main.py
src/daily_minesweeper/: __init__.py  constants.py  data_model.py  display.py  parser.py  solver.py  utils.py
src/tests/: __init__.py  test_parser.py  test_solver.py  test_strategy_deduce_from_neighbors.py  test_strategy_suspect_adjacent_candidates.py
src/tests/data/: minesweeper-5x5-easy.html  minesweeper-5x5-hard.html
