[project]
name = "daily-minesweeper-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "selenium>=4.34.2",
]


[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select=["D", "N", "PTH"]
ignore =["D203", "D213"]
